--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -71,4 +71,7 @@
 <a href = "w0.html">previous</a> |
 <a href = "view-source:http://bardcollege.github.io/workshop1/w1.html">code</a> |
 <a href = "w2.html">next</a>  
-
+<blockquote>
+     "During all the time the Spotted-buffalo were going back into the hole in the ground the
+     Man-person had not once looked at me. He stood facing the south as though the Spotted-buffalo belonged there." 
+</blockquote>
