--- a/workshop1/w3.html
+++ b/workshop1/w3.html
@@ -14,7 +14,7 @@
 
   <head>
     <title>Bard College Language and Thinking</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="green" href="../style.css">
   </head>
 
   <body>
