--- a/workshop1/w3.html
+++ b/workshop1/w3.html
@@ -12,9 +12,9 @@
 
 <html>
 
-  <head>
+ <head>
     <title>Bard College Language and Thinking</title>
-    <link rel="green" href="../style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
 
   <body>
